--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.1.0",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "18.1.0",
     "reactjs-popup": "^2.0.5",
     "save-html-as-image": "^1.7.1"
